# anodapi

./: .gitignore  README.MD  README.md  anodapi.cabal  cabal.project
app/: Main.hs
scripts/: build_sc_keys.sh  build_submit_sign_trans.sh  build_trans.sh  build_trans_alt_amt.sh  build_trans_wrapper.sh  grab_utxo.sh  query_head.sh  sign_trans.sh  sign_trans_wrapper.sh  submit_trans.sh  submit_trans_wrapper.sh  test_post.sh  watch_query_head.sh
transactions/txAltTesting01/: tx.build
