cabal-version:      3.6
name:               anodapi
version:            0.1.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trevor Knott
maintainer:         @cardanymouz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable anodapi
    main-is:          Main.hs
    build-depends:    
      adanodium,
      wai,
      aeson,
      transformers,
      warp,
      wai,
      time,
      servant-server,
      servant,
      base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
